@@ -19,7 +19,7 @@
    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 */
 
-#include "main.h"
+#include "ssdeep.h"
 
 static int initialize_state(state *s)
 {
