@@ -1,0 +1,21 @@
+
+/* Fuzzy Hashing by Jesse Kornblum
+   Copyright (C) 2008 ManTech International Corporation
+
+   $Id$ 
+*/
+
+#ifndef __SSDEEP_H
+#define __SSDEEP_H
+
+#include "main.h"
+
+#ifdef __GLIBC__
+extern char *__progname;
+#else 
+char *__progname;
+#endif
+
+
+
+#endif __SSDEEP_H
